# chimera-sigil

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  chimera-sigil-release.example.json  package.json
.github/: FUNDING.yml
crates/chimera-cli/: Cargo.toml
crates/chimera-cli/src/: main.rs
crates/chimera-core/: Cargo.toml
crates/chimera-core/src/: agent.rs  config.rs  lib.rs  report_contract.rs  session.rs  textual_tool_calls.rs
crates/chimera-providers/: Cargo.toml
crates/chimera-providers/src/: anthropic.rs  collab.rs  fallback.rs  grok.rs  lib.rs  openai.rs  provider.rs  stream.rs  types.rs
crates/chimera-tools/: Cargo.toml
crates/chimera-tools/src/: dispatch.rs  lib.rs  registry.rs
crates/chimera-tools/src/builtins/: bash.rs  edit_file.rs  glob_search.rs  grep_search.rs  list_dir.rs  mod.rs  read_file.rs  structured_output.rs  write_file.rs
docs/: hardware-optimization-process.md  local-first-model-system.md
scripts/: create-release-asset.mjs  install.mjs  npm-platform.mjs  release-config.mjs  release-integrity.mjs  release-local.mjs
