[package]
name = "chimera-sigil-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chimera"
path = "src/main.rs"

[dependencies]
chimera-sigil-core.workspace = true
chimera-sigil-providers.workspace = true
chimera-sigil-tools.workspace = true
tokio.workspace = true
serde_json.workspace = true
clap.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
