[package]
name = "chimera-sigil-core"
version.workspace = true
edition.workspace = true

[dependencies]
chimera-sigil-providers.workspace = true
chimera-sigil-tools.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile = "3"

[lints]
workspace = true
