[package]
name = "chimera-sigil-providers"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true
