[package]
name = "chimera-sigil-tools"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
glob.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tempfile = "3"
chimera-sigil-providers.workspace = true

[lints]
workspace = true
